--- a/frontend/src/blocks/profile/profile.css
+++ b/frontend/src/blocks/profile/profile.css
@@ -2,7 +2,7 @@
   max-width: 880px;
   min-height: 120px;
   display: flex;
-  margin: 0 auto 50px auto;
+  margin: 40px auto 50px auto;
   align-items: center;
   justify-content: space-between;
 }
